--- a/application/extra/view/themes/bootstrap/problems.html
+++ b/application/extra/view/themes/bootstrap/problems.html
@@ -15,13 +15,7 @@
 						</div>
 					</form>
 					<br><br>
-
-					<ul class="pagination">
-						{for start="1" end="$page_cnt+1"}
-						<li{if $page == $i} class="active"{/if}><a href="/problems?page={$i}">{$i}</a></li>
-						{/for}
-					</ul>
-
+					{$problems->render()}
 
 					<table class="table table-hover">
 						<thead>
@@ -29,7 +23,7 @@
 							<th></th>
 							<th>{$lang.problem_id}</th>
 							<th>{$lang.title}</th>
-							<th>{$lang.source}</th>
+							<th>{$lang.tag}</th>
 							<th>{$lang.accepted}</th>
 							<th>{$lang.submit}</th>
 						</tr>
@@ -44,7 +38,10 @@
 							</td>
 							<td><a href="/problem?id={$problem->problem_id}">{$problem->problem_id}</a></td>
 							<td><a href="/problem?id={$problem->problem_id}">{$problem->title}</a></td>
-							<td>{$problem->source}</td>
+							<td>
+								<?php $flag = false;?>
+								{volist name="problem->tag_list" id="tag"}{if $flag},{/if}<a href="/problems?tag={$tag}">{$problem_tag_dict_map[$tag]}</a><?php $flag = true;?>{/volist}
+							</td>
 							<td>{$problem->solved}</td>
 							<td>{$problem->submit}</td>
 						</tr>
@@ -53,15 +50,28 @@
 						</tbody>
 					</table>
 
-					<ul class="pagination">
-						{for start="1" end="$page_cnt+1"}
-						<li{if $page == $i} class="active"{/if}><a href="/problems?page={$i}">{$i}</a></li>
-						{/for}
-					</ul>
+					{$problems->render()}
 				</div>
 			</div>
 		</div>
 		<div class="col-md-3">
+
+			<!--			题目标签 begin-->
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title">
+						题目标签
+					</h3>
+				</div>
+				<div class="panel-body">
+					{volist name="problem_tags" id="problem_tag"}
+					<a href="/problems?tag={$problem_tag->tag_id}">{$problem_tag->tag_name}({$problem_tag->cnt})</a> &nbsp;
+					{/volist}
+				</div>
+			</div>
+			<!--			题目标签 end-->
+
+			<!--			近期未解决问题 begin-->
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h3 class="panel-title">
@@ -75,7 +85,6 @@
 						<tr>
 							<th>ID</th>
 							<th>Status</th>
-<!--							<th>Date</th>-->
 						</tr>
 						</thead>
 						<tbody>
@@ -83,7 +92,6 @@
 						<tr>
 							<td><a href="/problem?id={$unsolved_solution.problem_id}">{$unsolved_solution.problem_id}</a></td>
 							<td style="color: red">{$unsolved_solution.result_text}</td>
-<!--							<td>2019-09-12 12:18:09</td>-->
 						</tr>
 						{/volist}
 						</tbody>
@@ -93,6 +101,8 @@
 					{/if}
 				</div>
 			</div>
+			<!--			近期未解决问题 end-->
+
 		</div>
 	</div>
 </div>
