--- a/application/extra/view/themes/bootstrap/layout/common.html
+++ b/application/extra/view/themes/bootstrap/layout/common.html
@@ -13,7 +13,7 @@
 <!--	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
 <!--	<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
 
-	<link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/fontawesome.min.css" rel="stylesheet">
+	<link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -25,8 +25,7 @@
 	<![endif]-->
 
 	<!--引入layer.js文件 begin-->
-    <!--<script src="https://cdn.bootcss.com/layer/2.3/layer.js"></script>-->
-	<script src="//cdn.jsdelivr.net/gh/bootcdn/BootCDN/ajax/libs/layer/2.3/layer.js"></script>
+	<script src="https://cdn.bootcss.com/layer/2.3/layer.js"></script>
 	<!--引入layer.js文件 end-->
 
 	<style>
