--- a/application/extra/view/themes/bootstrap/status.html
+++ b/application/extra/view/themes/bootstrap/status.html
@@ -184,17 +184,9 @@
     }
 </script>
 
-<link rel="stylesheet"
-	  href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/atom-one-light.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+<link href="https://cdn.bootcss.com/highlight.js/9.15.10/styles/atom-one-light.min.css" rel="stylesheet">
+<script src="https://cdn.bootcss.com/highlight.js/9.15.10/highlight.min.js"></script>
 
 
-<script type="text/javascript">
-// $(document).ready(function() {
-// 	$('pre code').each(function(i, block) {
-// 		hljs.highlightBlock(block);
-// 	});
-// });
-</script>
 
 {/block}
