比赛作业增加类型选择、密码设置功能

--- a/application/admin/view/contest/contest_list.html
+++ b/application/admin/view/contest/contest_list.html
@@ -1,6 +1,9 @@
 {extend name="base" /}
 {block name="content"}
 <div class="x-body">
+    <div class="layui-row">
+        <a class="layui-btn layui-btn-sm" href="javascript:" onclick="x_admin_show('添加比赛','/admin/contest/add');">添加比赛</a>
+    </div>
     <table class="layui-hide" id="contest-list"></table>
 </div>
 
