--- a/application/admin/view/homework/homework_list.html
+++ b/application/admin/view/homework/homework_list.html
@@ -2,8 +2,7 @@
 {block name="content"}
 <div class="x-body">
     <div class="layui-row">
-        <a class="layui-btn layui-btn-sm" href="javascript:"
-           onclick="x_admin_show('添加作业','/admin/contest/add');">添加作业</a>
+        <a class="layui-btn layui-btn-sm" href="javascript:" onclick="x_admin_show('添加作业','/admin/contest/add');">添加作业</a>
     </div>
     <table class="layui-hide" id="homework-list"></table>
 </div>
