docs: “江西理工大学编程俱乐部”更名为“江西理工大学在线测评系统”

--- a/application/extra/view/themes/bootstrap/contest-problems.html
+++ b/application/extra/view/themes/bootstrap/contest-problems.html
@@ -1,5 +1,5 @@
 {extend name="extra@themes/bootstrap/layout-contest/contest-layout" /}
-{block name='titlepart'}{$contest->title} - 江西理工大学编程俱乐部{/block}
+{block name='titlepart'}{$contest->title} - 江西理工大学在线测评系统{/block}
 {block name='body'}
 <div class="container">
 	<table class="table table-hover">
