--- a/application/extra/view/themes/bootstrap/layout/common.html
+++ b/application/extra/view/themes/bootstrap/layout/common.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="description" content="JustOJ、江西理工大学编程俱乐部、在线编程平台、只为提高你的编程水平。">
+	<meta name="description" content="JustOJ、江西理工大学在线测评系统、在线编程平台、只为提高你的编程水平。">
 	<meta name="keywords" content="ACM-ICPC,Online Judge,编程,C语言,C++,Java,Python,ACMer,JustOJ">
 	<link rel="shortcut icon" href="/favicon.gif" type="image/x-icon" />
 	<title>{block name='titlepart'}{$lang['welcome_to_justoj']}{/block}</title>
