--- a/application/admin/view/base.html
+++ b/application/admin/view/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{$title|default="江西理工大学编程俱乐部后台管理系统"}</title>
+    <title>{$title|default="江西理工大学在线测评系统后台管理系统"}</title>
     <meta name="renderer" content="webkit|ie-comp|ie-stand">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=1.0"/>
