--- a/application/admin/view/problem/problem_list.html
+++ b/application/admin/view/problem/problem_list.html
@@ -3,8 +3,7 @@
 <div class="x-body">
     <div class="layui-row">
         <form class="layui-form layui-col-md12 x-so" id="problemFilterForm">
-            <a class="layui-btn" href="javascript:"
-               onclick="x_admin_show('添加题目','/admin/problem/add', 800, 530);">添加题目</a>
+            <a class="layui-btn" href="/admin/problem/add" target="_blank">添加题目</a>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <input class="layui-input" type="text" name="keyword" id="keyword" placeholder="关键字搜索" autocomplete="off">
             <button type="submit" class="layui-btn" lay-submit="" lay-filter="search"><i class="layui-icon"></i></button>
